WebKit/qt/Api/qwebview.cpp
@@ -415,9 +415,6 @@ void QWebView::setPage(QWebPage* page)
                 this, SLOT(updateMicroFocus()));
         connect(d->page, SIGNAL(destroyed()),
                 this, SLOT(_q_pageDestroyed()));
-#if USE(ACCELERATED_COMPOSITING)
-        d->page->d->page->settings()->setAcceleratedCompositingEnabled(false);
-#endif
     }
     setAttribute(Qt::WA_OpaquePaintEvent, d->page);
     update();
